--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 osx_image: xcode8.1
 language: objective-c
 script:
-- set -o pipefail && xcodebuild build -project yalu102.xcodeproj -xcconfig extra_recipe.xcodeproj -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty
+- set -o pipefail && xcodebuild build -project extra_recipe.xcodeproj -xcconfig extra_recipe.xcconfig -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO | xcpretty
 - ls
